[gd_scene load_steps=7 format=2]

[ext_resource path="res://actors/enemy/side-scroll-enemy.svg" type="Texture" id=1]
[ext_resource path="res://interface/health_bar/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://health/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/enemy/EnemyKinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://actors/enemy/Enemy.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 5 )

[node name="Health" parent="." instance=ExtResource( 3 )]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )
speed = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 0, -24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HealthBar" parent="KinematicBody2D/Sprite" instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -162.0
margin_top = -96.0
margin_right = 62.0
margin_bottom = -72.0

[node name="ShowTime" type="Timer" parent="KinematicBody2D/Sprite/HealthBar"]
one_shot = true

[node name="HurtBox" type="Area2D" parent="KinematicBody2D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/HurtBox"]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="RecoverTimer" type="Timer" parent="KinematicBody2D/HurtBox"]
wait_time = 0.5
one_shot = true
[connection signal="depleted" from="Health" to="." method="_on_Health_depleted"]
[connection signal="draw" from="KinematicBody2D/Sprite/HealthBar" to="KinematicBody2D/Sprite/HealthBar/ShowTime" method="start"]
[connection signal="timeout" from="KinematicBody2D/Sprite/HealthBar/ShowTime" to="KinematicBody2D/Sprite/HealthBar" method="hide"]
[connection signal="body_entered" from="KinematicBody2D/HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="timeout" from="KinematicBody2D/HurtBox/RecoverTimer" to="." method="_on_RecoverTimer_timeout"]
